[package]
name = "opaly"
version = "0.1.0"
authors = ["loxygenk <me@loxygen.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-edit = "0.7.0"
tokio = "1.10.0"
dotenv = "0.15.0"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["rustls_backend", "client", "gateway", "model", "cache"]
